--- a/KhaiThacDuLieu.ipynb
+++ b/KhaiThacDuLieu.ipynb
@@ -839,9 +839,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```markdown\n",
-    "Q1: Có bao nhiêu khách hàng được phân đoạn theo nhóm tuổi?\n",
-    "```"
+    "\n",
+    "Q1: Có bao nhiêu khách hàng được phân đoạn theo nhóm tuổi?"
    ]
   },
   {
@@ -863,6 +862,16 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lưu DataFrame vào file CSV\n",
+    "df.to_csv('dataset_with_age_groups.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1442,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
