--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -640,13 +640,13 @@
     "r2 = r2_score(y_test, y_pred)\n",
     "\n",
     "print(\"RandomForestRegressor Performance:\")\n",
-    "print(f\"MAE: {mae}\") #Mean Absolute Error\n",
-    "print(f\"R²: {r2}\") #Coefficiente di Determinazione"
+    "print(f\"MAE: {mae}\") #Sai số tuyệt đối trung bình\n",
+    "print(f\"R²: {r2}\") #Hệ số xác định"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -668,19 +668,19 @@
     "grid_search = GridSearchCV(estimator=rf_model, param_grid=param_grid, cv=3, n_jobs=-1, scoring='neg_mean_absolute_error')\n",
     "grid_search.fit(X_train, y_train)\n",
     "\n",
-    "# Migliori parametri trovati\n",
+    "# Các thông số tìm kiếm tốt nhất\n",
     "best_params = grid_search.best_params_\n",
     "print(\"Best Parameters from GridSearchCV:\")\n",
     "print(best_params)\n",
     "\n",
-    "# Addestriamo il modello con i migliori parametri\n",
+    "# Thêm mô hình với các tham số di chuyển\n",
     "best_rf_model = grid_search.best_estimator_\n",
     "y_pred_optimized = best_rf_model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -698,13 +698,13 @@
     "r2_optimized = r2_score(y_test, y_pred_optimized)\n",
     "\n",
     "print(\"Optimized Model Performance:\")\n",
-    "print(f\"MAE: {mae_optimized}\") #Mean Absolute Error\n",
-    "print(f\"R²: {r2_optimized}\") #Coefficiente di Determinazione)"
+    "print(f\"MAE: {mae_optimized}\") #Sai số tuyệt đối trung bình\n",
+    "print(f\"R²: {r2_optimized}\") #Hệ số xác định"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -720,30 +720,29 @@
    "source": [
     "df['Predicted'] = rf_model.predict(X)\n",
     "\n",
-    "# Valutazione del modello ottimizzato\n",
+    "# Định giá mô hình được tối ưu hóa\n",
     "mae_Pred_X = mean_absolute_error(df['Purchase Amount (USD)'], df['Predicted'])\n",
     "r2_Pred_X = r2_score(df['Purchase Amount (USD)'], df['Predicted'])\n",
     "\n",
     "print(\"Predizione Totale Performance:\")\n",
-    "print(f\"MAE: {mae_Pred_X}\") #Mean Absolute Error\n",
-    "print(f\"R²: {r2_Pred_X}\") #Coefficiente di Determinazione"
+    "print(f\"MAE: {mae_Pred_X}\") #Sai số tuyệt đối trung bình\n",
+    "print(f\"R²: {r2_Pred_X}\") #Hệ số xác định"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "grouped_df = df.groupby(['Gender', 'Location']).agg({'Purchase Amount (USD)': 'mean', 'Predicted': 'mean'}).reset_index()\n",
     "\n",
-    "# Arrotondare le predizioni a 3 cifre decimali\n",
     "grouped_df['Predicted'] = grouped_df['Predicted'].round(3)\n",
     "\n",
-    "# Ordinare le location in ordine alfabetico\n",
+    "\n",
     "grouped_df = grouped_df.sort_values(by='Location')\n",
     "\n",
-    "# Visualizzare la tabella delle predizioni per sesso e località\n",
+    "\n",
     "\n",
     "def plot_combined(data, title, y_min, y_max):\n",
     "    fig, ax1 = plt.subplots(figsize=(12, 8))\n",
@@ -766,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +865,7 @@
     "    \n",
     "    plot_combined(grouped_df_gender, f'Predicted vs Actual Purchase Amounts for {gender}s by Location', 0, grouped_df['Purchase Amount (USD)'].max() + 1)\n",
     "\n",
-    "    # Calcolare la differenza di predizione attuale\n",
+    "    # Tính toán sự khác biệt của xu hướng hiện tại\n",
     "    dif_pred = grouped_df_gender['Predicted'] - grouped_df_gender['Purchase Amount (USD)']\n",
     "\n",
     "    plt.figure(figsize=(12, 8))\n",
