--- a/KhaiThacDuLieu.ipynb
+++ b/KhaiThacDuLieu.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -222,13 +222,13 @@
     }
    ],
    "source": [
-    "# Show data\n",
+    "# hiện thị dữ liệu\n",
     "df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -261,13 +261,13 @@
     }
    ],
    "source": [
-    "# Check null value\n",
+    "# kiểm tra giá trị rỗng\n",
     "df.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -303,13 +303,13 @@
     }
    ],
    "source": [
-    "# Check not null value\n",
+    "# kiểm tra kiểu dữ liệu\n",
     "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -342,13 +342,13 @@
     }
    ],
    "source": [
-    "# Check data type of each columns\n",
+    "# kiểm tra dữ liệu mỗi cột\n",
     "df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -464,13 +464,13 @@
     }
    ],
    "source": [
-    "# Descriptive Statistics\n",
+    "# mô tả thông kê\n",
     "df.describe().T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -488,13 +488,13 @@
     }
    ],
    "source": [
-    "# Check unique value of column Age\n",
+    "# kiểm tra dữ liệu duy nhất của cột Age và sắp xếp tăng dần\n",
     "df['Age'].sort_values().unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -509,13 +509,13 @@
     }
    ],
    "source": [
-    "# Check unique value of column Gender\n",
+    "#kiểm tra dữ liệu duy nhất của cột Gender\n",
     "df['Gender'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
     }
    ],
    "source": [
-    "# Check unique value of column Item Purchased\n",
+    "# kiểm tra dữ liệu duy nhất Item Purchased\n",
     "df['Item Purchased'].unique()"
    ]
   },
@@ -731,22 +731,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert wrong datatype into correct datatype\n",
+    "# Chuyển đổi kiểu dữ liệu sai thành kiểu dữ liệu đúng\n",
     "df['Purchase Amount (USD)'] = df['Purchase Amount (USD)'].astype(int)\n",
     "df['Customer ID'] = df['Customer ID'].astype(str)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check duplicate value\n",
+    "# Kiểm tra giá trị trùng lặp\n",
     "duplicated_data = df[df.duplicated()].sort_values('Customer ID', ascending=True)"
    ]
   },
@@ -845,17 +845,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Age group bins\n",
+    "# phân nhóm tuổi theo từng giỏ\n",
     "bins = [18, 25, 35, 45, 55, 65]\n",
     "\n",
-    "# Labels for age groups\n",
+    "# Nhãn cho nhóm tuổi\n",
     "labels = ['18-25', '26-35', '36-45', '46-55', '56-65']\n",
     "\n",
-    "# Create new Age Group\n",
+    "# Tạo nhóm tuổi mới\n",
     "df['Age Group'] = pd.cut(df['Age'], bins=bins, labels=labels)"
    ]
   },
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -886,20 +886,20 @@
     }
    ],
    "source": [
-    "# Count total Customers by Age Group\n",
+    "# Đếm tổng số khách hàng theo nhóm tuổi\n",
     "total_customer_by_age_group = df['Age Group'].value_counts().sort_index()\n",
     "colors = ['#FC4100', '#0056B3', '#FFC55A', '#9BC4F8', '#59D5E0']\n",
     "\n",
-    "# Plot the data as a bar chart\n",
+    "# Vẽ dữ liệu dưới dạng biểu đồ thanh\n",
     "bars = total_customer_by_age_group.plot(kind='bar', color=colors, figsize=(16, 5))\n",
     "\n",
-    "# Add title\n",
+    "# Thêm tiêu đề\n",
     "plt.title('Total number of Customers Segmented by Age Group')\n",
     "plt.xlabel('Age Group')\n",
     "plt.xticks(rotation=0, ha='center')\n",
     "plt.ylabel('Total number of Customers')\n",
     "\n",
-    "# Add data labels on top of each bar\n",
+    "# Thêm nhãn dữ liệu vào đầu mỗi thanh\n",
     "for bar in bars.patches:\n",
     "    height = bar.get_height()\n",
     "    bars.annotate(f'{height}',\n",
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
     }
    ],
    "source": [
-    "# Count total Customers by Age Group and Gender\n",
+    "# Đếm tổng số khách hàng theo nhóm tuổi và giới tính\n",
     "total_customer_by_age_group_and_gender = df.groupby(['Age Group'])['Gender'].value_counts().unstack()\n",
     "colors = ['#FC4100', '#0056B3']\n",
     "\n",
